--- a/care/src/main/resources/templates/components/header.html
+++ b/care/src/main/resources/templates/components/header.html
@@ -5,5 +5,10 @@
     <ul>
         <li><a href="/">início</a></li>
         <li><a href="/animais">animais</a></li>
+        <li>
+            <form method="get" action="/animais">
+                <input type="search" name="q" placeholder="buscar animal" class="search-input">
+            </form>
+        </li>
     </ul>
 </header>
