--- a/care/src/main/resources/templates/index.html
+++ b/care/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <html th:replace="~{/components/layout :: layout ('Início', ~{:: main})}">
 <body>
 	<main class="container">
+    <p><a href="/">Início</a></p><br />
     <p>🙌 Olá, como vai hoje?</p>
   </main>
 </body>
