--- a/care/src/main/resources/templates/components/footer.html
+++ b/care/src/main/resources/templates/components/footer.html
@@ -1,3 +1,3 @@
-<footer th:fragment="footer" class="footer">
+<footer th:fragment="footer" class="bg-slate-200 p-4">
     <p>Copyright - @2023 - Tio Benny's</p>
 </footer>
