--- a/care/src/main/resources/templates/animais.html
+++ b/care/src/main/resources/templates/animais.html
@@ -9,7 +9,7 @@
           <h1 class="text-3xl font-bold" th:if="${q} == null" th:text="'🐱 Animais (' + ${total} + ')'"></h1>
           <h1 class="text-3xl font-bold" th:if="${q} != null" th:text="'🔍 Buscando por ' + ${q}"></h1>
           <p class="text-gray-500"
-            th:text="'Exibindo ' + (${offset} + ${limit}) + ' de ' + ${total} + ' resultado(s) encontrado(s).'"></p>
+            th:text="'Exibindo ' + ${recordsThisPage}  + ' de ' + ${total} + ' resultado(s) encontrado(s).'"></p>
           <br />
         </div>
         <a class="p-2 rounded-lg bg-purple-300 text-purple-900 font-bold" href="/form-animal">+ Novo Animal</a>
