--- a/care/src/main/resources/templates/components/layout.html
+++ b/care/src/main/resources/templates/components/layout.html
@@ -11,6 +11,31 @@
   <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.min.js"
+    integrity="sha512-7U4rRB8aGAHGVad3u2jiC7GA5/1YhQcQjxKeaVms/bT66i3LVBMRcBI9KwABNWnxOSwulkuSXxZLGuyfvo7V1A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <style>
+    .container-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-rows: auto;
+      grid-auto-flow: row;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+      margin-top: 50px;
+    }
+
+    .card-header {
+      background-color: #F0F1FF;
+      border: 1px solid #FDF0FF;
+      padding: 10px;
+      border-radius: 0.25rem;
+      box-shadow: 0px 9px 40px 0px rgba(207, 196, 245, 1);
+    }
+  </style>
 </head>
 
 <body>
