--- a/care/src/main/resources/templates/index.html
+++ b/care/src/main/resources/templates/index.html
@@ -1,8 +1,134 @@
 <html th:replace="~{/components/layout :: layout ('Início', ~{:: main})}">
+
 <body>
-	<main class="container">
+  <main>
     <p><a href="/">Início</a></p><br />
-    <p>🙌 Olá, como vai hoje?</p>
+
+    <h1 class="text-center font-semibold text-4xl mt-8">🙌 Olá, como vai hoje? Segue abaixo informes do mês 📊:</h1>
+
+    <div class="flex flex-row gap-8 justify-center items-center flex-wrap w-full mt-10 p-4">
+      <div class="flex flex-col items-center gap-2 card-header">
+        <h1 class="text-center text-3xl">Animais atendidos hoje:</h1>
+        <span class="text-lg font-medium" th:text="${qtdAtendimentos} + ' 💹'"></span>
+      </div>
+
+      <div class="flex flex-col items-center gap-2 card-header">
+        <h1 class="text-center text-3xl">Taxa de sucesso por cirurgia:</h1>
+        <span class="text-lg font-medium">99.7% 💹</span>
+      </div>
+
+      <div class="flex flex-col items-center gap-2 card-header">
+        <h1 class="text-center text-3xl">Avaliação da clínica:</h1>
+        <span class="text-lg font-medium">⭐⭐⭐⭐ (4.1)</span>
+      </div>
+    </div>
+
+    <div class="container-grid">
+      <div class="flex justify-end items-center">
+        <!-- <img
+          src="https://miro.medium.com/v2/resize:fit:1136/1*YyWMcWEkmsLfSvpvVvVyAg.png"
+          class="object-scale-down"
+          alt="" /> -->
+        <canvas width="50%" height="50%" id="myChart"></canvas>
+        <script th:inline="javascript">
+          /*<![CDATA[*/
+          const qtdDog = /*[[${qtdDog}]]*/ "";
+          const qtdCat = /*[[${qtdCat}]]*/ "";
+          const retornoConsultas = /*[[${consultasMonth}]]*/ "";
+          /*]]>*/
+          console.log(retornoConsultas);
+
+          const ctx = document.getElementById('myChart');
+          let labels = [];
+          let valores = [];
+          retornoConsultas.consultas.forEach(valor => { labels.push(valor.mes); valores.push(valor.qtdConsulta) });
+
+
+          const data = {
+            labels: labels,
+            datasets: [{
+              label: "N° de consultas",
+              data: valores,
+              backgroundColor: 'rgb(172, 142, 249)',
+              borderWidth: 1
+            }]
+          }
+
+          // const data = {
+          //   labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+          //   datasets: [{
+          //     label: '# of Votes',
+          //     data: [12, 19, 3, 5, 2, 3],
+          //     borderWidth: 1
+          //   }]
+          // }
+
+          new Chart(ctx, {
+            type: 'bar',
+            data: data,
+            options: {
+              scales: {
+                y: {
+                  beginAtZero: true
+                }
+              }
+            }
+          });
+        </script>
+      </div>
+      <div class="flex flex-col gap-5 justify-start items-center">
+        <span class="text-center text-4xl">Relação consultas x mês</span>
+
+        <span class="text-center">Situação: <span class="text-green-400 text-base">Promissora!</span> 📈</span>
+
+        <span class="text-center">Baseado também nos três últimos meses anteriores, sua média está: <span
+            class="text-green-400 text-base">Saudável!</span>
+        </span>
+      </div>
+    </div>
+
+    <div class="container-grid">
+      <div class="flex flex-col gap-5 justify-start items-center">
+        <span class="text-center text-4xl">Animais mais atendidos neste mês</span>
+
+        <span class="text-center">O(s) animal(is) mais atendido(s) foram: <span th:text="${maisAtendidos}"
+            class="text-green-400 text-base"></span></span>
+
+        <span class="text-center">Baseado também nos três últimos meses anteriores, o animal mais atendido foi: <span
+            class="text-green-400 text-base">Cachorros 🐶</span>
+        </span>
+      </div>
+      <div class="flex justify-start items-center">
+        <!-- <img src="https://miro.medium.com/v2/resize:fit:1136/1*YyWMcWEkmsLfSvpvVvVyAg.png" class="object-scale-down"
+          alt="" /> -->
+        <canvas width="50%" height="50%" id="myChart2"></canvas>
+        <script>
+          const ctx2 = document.getElementById('myChart2');
+          console.log(qtdDog);
+          console.log(qtdCat);
+
+          new Chart(ctx2, {
+            type: 'doughnut',
+            data: {
+              labels: [
+                'Cachorros',
+                'Gatos'
+              ],
+              datasets: [{
+                label: 'Quantidade',
+                data: [qtdDog, qtdCat],
+                backgroundColor: [
+                  'rgb(172, 142, 249)',
+                  'rgb(255, 205, 86)'
+                ],
+                hoverOffset: 4
+              }]
+            }
+          });
+        </script>
+      </div>
+    </div>
   </main>
 </body>
+
 </html>
